﻿$Revision$
	$Author$ $Date$
	- правки C и C++ по патчам от HaRT

#Revision: 1665
	ctapmex 2011-03-06 18:07:06 +0500 (Вс, 06 мар 2011)
	- доработка схемы c# по тикету "еще добавки в hrc для C# - ID: 2983454" и
	 "C# yield return and yield break keywords - ID: 2687858"
	- поддержка Expect по тикету "добавить ключевые слова expect в hrc/base/tcltk.hrc - ID: 2983449"

#Revision: 1652
	ctapmex 2011-02-21 20:27:55 +0500 (Пн, 21 фев 2011)
	- комментарии в TCL

#Revision: 1596
	ctapmex 2010-10-25 23:24:30 +0600 (Пн, 25 окт 2010)
	- из proto.hrc убраны параметры фара. перенесены в hrcsettings.xml проекта far2colorer
	- для сборки схем для старых версий фара используем цель hrcupdate.old

#Revision: 1587
	ctapmex 2010-10-22 15:04:22 +0600 (Пт, 22 окт 2010)
	- в бат файлах комментарии и метки могут начинаться не с начал строки
	- в бат файлах символ ^ в командке echo является esc символом
	- в схему esc добавлен один пропущенный параметр

#Revision: 1525
	ctapmex 2010-07-12 23:21:04 +0600 (Пн, 12 июл 2010)
	- в sql.hrc добавлено ключевое слово

#Revision: 1522
	ctapmex 2010-07-02 11:45:10 +0600 (Пн, 02 июл 2010)
	- исправлена схема reg.hrc , обработка пустых hex строк

#Revision: 1519
	ctapmex 2010-06-28 16:02:23 +0600 (Пн, 28 июн 2010)
	- обновлены тесты схем

#Revision: 1518
	ctapmex 2010-06-28 14:42:45 +0600 (Пн, 28 июн 2010)
	- обновлён far.hrc
	- в jcl.hrc добавлена поддержка комментариев 

#Revision: 1517
	ctapmex 2010-06-25 16:53:52 +0600 (Пт, 25 июн 2010)
	- changes.txt в актуальное состояние
	- исправление ошибки в proto.hrc

#Revision: 1448
	ctapmex 2010-03-10 17:42:59 +0500 (Ср, 10 мар 2010)
	- idl.hrc "С тем, что в поставке - outliner можно сказать не работает" (с)Maximus5

#Revision: 1434
	ctapmex 2010-03-06 16:49:54 +0500 (Сб, 06 мар 2010)
	- far.hrc, новые функции и константы
	- обновил тесты для ruby

#Revision: 1422
	ctapmex 2010-03-03 23:38:42 +0500 (Ср, 03 мар 2010)
	- makefile: продублировано описание региона

#Revision: 1416