@@ -15,11 +15,11 @@
  14: <span class='def-Keyword'>function</span> beginDownload<span class='def-Symbol'>(</span><span class='def-Symbol'>)</span> <span class='def-SymbolStrong def-Symbol'>{</span>
  15:   <span class='def-Comment def-Syntax'>// backupURL used for download if no URLs have a reliability rating > 64 and no URLs are in the U.S.</span>
  16:   <span class='def-Comment def-Syntax'>// (backupURL is set to the last URL looped through when setting the URL arrays)</span>
- 17:   <span class='def-Keyword'>if</span> <span class='def-Symbol'>(</span> allUrls<span class='def-Symbol'>.</span>length <span class='def-Symbol'>==</span> <span class='def-NumberDec def-Number'>0</span> <span class='def-Symbol'>)</span>  <span class='def-SymbolStrong def-Symbol'>{</span>
+ 17:   <span class='def-Keyword'>if</span> <span class='def-Symbol'>(</span> allUrls<span class='def-Symbol'>.</span><span class='def-Keyword'>length</span> <span class='def-Symbol'>==</span> <span class='def-NumberDec def-Number'>0</span> <span class='def-Symbol'>)</span>  <span class='def-SymbolStrong def-Symbol'>{</span>
  18:     newlocation <span class='def-Symbol'>=</span> backupURL<span class='def-SymbolStrong def-Symbol'>;</span>
  19:   <span class='def-SymbolStrong def-Symbol'>}</span> <span class='def-Keyword'>else</span> <span class='def-SymbolStrong def-Symbol'>{</span>
  20:     <span class='def-Comment def-Syntax'>// allUrls contains URLs having a reliability rating > 64, or URLs in the U.S. (if there aren't any with a rating > 64)</span>
- 21:     x <span class='def-Symbol'>=</span> <span class='def-Var'>Math</span><span class='def-Symbol'>.</span><span class='def-Keyword'>ceil</span><span class='def-Symbol'>(</span><span class='def-Var'>Math</span><span class='def-Symbol'>.</span><span class='def-Keyword'>random</span><span class='def-Symbol'>(</span><span class='def-Symbol'>)</span><span class='def-Symbol'>*</span>allUrls<span class='def-Symbol'>.</span>length<span class='def-Symbol'>)</span><span class='def-SymbolStrong def-Symbol'>;</span>
+ 21:     x <span class='def-Symbol'>=</span> <span class='def-Var'>Math</span><span class='def-Symbol'>.</span><span class='def-Keyword'>ceil</span><span class='def-Symbol'>(</span><span class='def-Var'>Math</span><span class='def-Symbol'>.</span><span class='def-Keyword'>random</span><span class='def-Symbol'>(</span><span class='def-Symbol'>)</span><span class='def-Symbol'>*</span>allUrls<span class='def-Symbol'>.</span><span class='def-Keyword'>length</span><span class='def-Symbol'>)</span><span class='def-SymbolStrong def-Symbol'>;</span>
  22:     newlocation <span class='def-Symbol'>=</span> allUrls<span class='def-Symbol'>[</span>x<span class='def-Symbol'>-</span><span class='def-NumberDec def-Number'>1</span><span class='def-Symbol'>]</span> <span class='def-SymbolStrong def-Symbol'>;</span>
  23:   <span class='def-SymbolStrong def-Symbol'>}</span>
  24: 
