@@ -1,5 +1,5 @@
   Fixed:
-    - c, cpp  from HaRT 
+    - add missing words for c, cpp, jscript, qmake, sql, vbscript, email  from HaRT 
 
 2011-03-18 r1688 (FarColorer 1.0.3.1)
   New:
